spring and java upgrade and migrated to postgres